Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -300,7 +300,7 @@
     "    __total = len(largest_cc)\n",
     "    __first_node = list(largest_cc)[0]\n",
     "\n",
-    "    __graph = nx.subgraph(graph, largest_cc)\n",
+    "    __graph = nx.subgraph(graph, largest_cc).copy()\n",
     "\n",
     "    for cc in sorted_cc[1:]:\n",
     "        # return if adding another connected component will make the graph bigger than sample size\n",
