--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 192,
    "id": "120c19b0",
    "metadata": {},
    "outputs": [],
@@ -313,22 +313,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 193,
    "id": "87200d40",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NetworkXError",
-     "evalue": "Frozen graph can't be modified",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNetworkXError\u001b[0m                             Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [191], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m make_graph_bigger(graph, \u001b[38;5;241m25\u001b[39m, \u001b[38;5;28msorted\u001b[39m(nx\u001b[38;5;241m.\u001b[39mconnected_components(graph), key\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mlen\u001b[39m, reverse\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m), \u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "Cell \u001b[0;32mIn [190], line 17\u001b[0m, in \u001b[0;36mmake_graph_bigger\u001b[0;34m(graph, sample_size, sorted_cc, verbose)\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mlen\u001b[39m(__graph) \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mlen\u001b[39m(cc)) \u001b[38;5;241m>\u001b[39m sample_size: \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m     16\u001b[0m     \u001b[38;5;66;03m# add new edge to make the graph connected\u001b[39;00m\n\u001b[0;32m---> 17\u001b[0m     \u001b[43m__graph\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd_edge\u001b[49m\u001b[43m(\u001b[49m\u001b[43m__first_node\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mcc\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m __graph\n",
-      "File \u001b[0;32m/opt/homebrew/Caskroom/mambaforge/base/envs/mgma/lib/python3.9/site-packages/networkx/classes/function.py:157\u001b[0m, in \u001b[0;36mfrozen\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    155\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfrozen\u001b[39m(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[1;32m    156\u001b[0m     \u001b[39m\"\"\"Dummy method for raising errors when trying to modify frozen graphs\"\"\"\u001b[39;00m\n\u001b[0;32m--> 157\u001b[0m     \u001b[39mraise\u001b[39;00m nx\u001b[39m.\u001b[39mNetworkXError(\u001b[39m\"\u001b[39m\u001b[39mFrozen graph can\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt be modified\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mNetworkXError\u001b[0m: Frozen graph can't be modified"
-     ]
+     "data": {
+      "text/plain": [
+       "<networkx.classes.graph.Graph at 0x15be0c6d0>"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
