--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -304,7 +304,9 @@
     "\n",
     "    for cc in sorted_cc[1:]:\n",
     "        # return if adding another connected component will make the graph bigger than sample size\n",
-    "        if (len(__graph) + len(cc)) > sample_size: break\n",
+    "        if (len(__graph) + len(cc)) > sample_size:\n",
+    "            print_log(f\"Graph size: {len(__graph)}\")\n",
+    "            break\n",
     "\n",
     "        # add new edge to make the graph connected\n",
     "        __graph.add_edge(__first_node, list(cc)[0])\n",
