--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -302,10 +302,10 @@
     "\n",
     "    __graph = nx.subgraph(graph, largest_cc).copy()\n",
     "\n",
-    "    for cc in sorted_cc[1:]:\n",
+    "    for i, cc in enumerate(sorted_cc[1:]):\n",
     "        # return if adding another connected component will make the graph bigger than sample size\n",
     "        if (len(__graph) + len(cc)) > sample_size:\n",
-    "            print_log(f\"Graph size: {len(__graph)}\")\n",
+    "            print_log(f\"Graph size: {len(__graph)} + CC({i}): {len(cc)} > Sample Size: {sample_size}\")\n",
     "            break\n",
     "\n",
     "        # add new edge to make the graph connected\n",
