--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -308,6 +308,7 @@
     "            print_log(f\"Graph size: {len(__graph)} + CC({i}): {len(cc)} > Sample Size: {sample_size}\")\n",
     "            break\n",
     "\n",
+    "        print_log(f\"Adding CC({i}): {len(cc)} to the graph\")\n",
     "        # add new edge to make the graph connected\n",
     "        __graph.add_edge(__first_node, list(cc)[0])\n",
     "    return __graph"
