--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -311,6 +311,10 @@
     "        print_log(f\"Adding CC({i}): {len(cc)} to the graph\")\n",
     "        # add new edge to make the graph connected\n",
     "        __graph.add_edge(__first_node, list(cc)[0])\n",
+    "\n",
+    "        # add the new connected component to the graph\n",
+    "        __graph.add_edges_from(nx.subgraph(graph, cc).edges())\n",
+    "\n",
     "    return __graph"
    ]
   },
