--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -305,7 +305,7 @@
     "    for i, cc in enumerate(sorted_cc[1:]):\n",
     "        # return if adding another connected component will make the graph bigger than sample size\n",
     "        if (len(__graph) + len(cc)) > sample_size:\n",
-    "            print_log(f\"Graph size: {len(__graph)} + CC({i}): {len(cc)} > Sample Size: {sample_size}\")\n",
+    "            if verbose: print_log(f\"Graph size: {len(__graph)} + CC({i}): {len(cc)} > Sample Size: {sample_size}\")\n",
     "            break\n",
     "\n",
     "        print_log(f\"Adding CC({i}): {len(cc)} to the graph\")\n",
