--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -307,8 +307,7 @@
     "        if (len(__graph) + len(cc)) > sample_size:\n",
     "            if verbose: print_log(f\"Graph size: {len(__graph)} + CC({i}): {len(cc)} > Sample Size: {sample_size}\")\n",
     "            break\n",
-    "\n",
-    "        print_log(f\"Adding CC({i}): {len(cc)} to the graph\")\n",
+    "        if verbose: print_log(f\"Adding edge between {__first_node} and {list(cc)[0]}\")\n",
     "        # add new edge to make the graph connected\n",
     "        __graph.add_edge(__first_node, list(cc)[0])\n",
     "\n",
