Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -316,7 +316,7 @@
     "        if verbose: print_log(f\"Adding CC({i}) edges '{len(cc)}' to the graph\")\n",
     "        __graph.add_edges_from(nx.subgraph(graph, cc).edges())\n",
     "\n",
-    "    if plot: nx.draw(__graph, with_labels=True, label=\"Original Graph\")\n",
+    "    if plot: nx.draw(__graph, with_labels=True, label=\"Final Graph\")\n",
     "    return __graph"
    ]
   },
