--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -291,10 +291,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_graph_bigger(graph: nx.Graph, sample_size: int, sorted_cc: list = list(), verbose: bool = False, plot: bool = False) -> nx.Graph:\n",
+    "def make_graph_bigger(graph: nx.Graph, sample_size: int = 25, sorted_cc: list = list(), verbose: bool = False, plot: bool = False) -> nx.Graph:\n",
     "    \"\"\"\n",
     "    Makes the graph bigger by adding more nodes\n",
     "    \"\"\"\n",
+    "    raise ValueError(f\"Invalid sample size: {sample_size}\") if sample_size <= 0 \n",
     "\n",
     "    largest_cc = sorted_cc[0]\n",
     "\n",
