--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -295,7 +295,9 @@
     "    \"\"\"\n",
     "    Makes the graph bigger by adding more nodes\n",
     "    \"\"\"\n",
-    "    raise ValueError(f\"Invalid sample size: {sample_size}\") if sample_size <= 0 \n",
+    "    if sample_size <= 0: raise ValueError(f\"Invalid sample size: {sample_size}\")\n",
+    "    if len(sorted_cc) <= 1: raise ValueError(f\"Invalid sample size: {sample_size}\")\n",
+    "    \n",
     "\n",
     "    largest_cc = sorted_cc[0]\n",
     "\n",
