--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -296,7 +296,7 @@
     "    Makes the graph bigger by adding more nodes\n",
     "    \"\"\"\n",
     "    if sample_size <= 0: raise ValueError(f\"Invalid sample size: {sample_size}\")\n",
-    "    if len(sorted_cc) <= 1: raise ValueError(f\"Invalid sample size: {sample_size}\")\n",
+    "    if len(sorted_cc) <= 1: raise ValueError(f\"Invalid connected component list\")\n",
     "    \n",
     "\n",
     "    largest_cc = sorted_cc[0]\n",
