--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -307,7 +307,7 @@
     "    for i, cc in enumerate(sorted_cc[1:]):\n",
     "        # return if adding another connected component will make the graph bigger than sample size\n",
     "        if (len(__graph) + len(cc)) > sample_size:\n",
-    "            if verbose: print_log(f\"Graph size: {len(__graph)} + CC({i}): {len(cc)} > Sample Size: {sample_size}\")\n",
+    "            if verbose: print_log(f\"Graph size: {len(__graph)} + CC({i + 1}): {len(cc)} > Sample Size: {sample_size}\")\n",
     "            break\n",
     "        # add new edge to make the graph connected\n",
     "        if verbose: print_log(f\"Adding edge between '{__first_node}' and '{list(cc)[0]}'\")\n",
