--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -314,7 +314,7 @@
     "        __graph.add_edge(__first_node, list(cc)[0])\n",
     "\n",
     "        # add the new connected component to the graph\n",
-    "        if verbose: print_log(f\"Adding CC({i}) edges '{len(cc)}' to the graph\")\n",
+    "        if verbose: print_log(f\"Adding CC({i + 1}) edges '{len(cc)}' to the graph\")\n",
     "        __graph.add_edges_from(nx.subgraph(graph, cc).edges())\n",
     "\n",
     "    if plot: nx.draw(__graph, with_labels=True, label=\"Final Graph\")\n",
