--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -302,7 +302,6 @@
     "    __first_node = list(largest_cc)[0]\n",
     "\n",
     "    __graph = nx.subgraph(graph, largest_cc).copy()\n",
-    "    if plot: nx.draw(__graph, with_labels=True, label=\"Original Graph\")\n",
     "\n",
     "    for i, cc in enumerate(sorted_cc[1:]):\n",
     "        # return if adding another connected component will make the graph bigger than sample size\n",
@@ -317,6 +316,9 @@
     "        if verbose: print_log(f\"Adding {len(cc)} nodes from CC({i + 1}) to the graph\")\n",
     "        __graph.add_edges_from(nx.subgraph(graph, cc).edges())\n",
     "\n",
+    "    if plot:\n",
+    "        \n",
+    "        nx.draw(__graph, with_labels=True, label=\"Original Graph\")\n",
     "    if plot: nx.draw(__graph, with_labels=True, label=\"Final Graph\")\n",
     "    return __graph"
    ]
