--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -317,9 +317,11 @@
     "        __graph.add_edges_from(nx.subgraph(graph, cc).edges())\n",
     "\n",
     "    if plot:\n",
-    "        \n",
-    "        nx.draw(__graph, with_labels=True, label=\"Original Graph\")\n",
-    "    if plot: nx.draw(__graph, with_labels=True, label=\"Final Graph\")\n",
+    "        fig, axes = plt.subplots(nrows=1, ncols=2)\n",
+    "        axes[0].set_title(\"Original Graph\")\n",
+    "        nx.draw(graph, with_labels=True, ax=axes[0])\n",
+    "        axes[1].set_title(\"Final Graph\")\n",
+    "        nx.draw(__graph, with_labels=True, ax=axes[1])\n",
     "    return __graph"
    ]
   },
