--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -337,6 +337,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 221,
+   "id": "d455595c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list(g.nodes()))\n",
+    "len(list(graph.nodes()))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 215,
    "id": "87200d40",
    "metadata": {},
