Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -293,7 +293,7 @@
    "source": [
     "def make_graph_connected(graph: nx.Graph, sample_size: int = 25, sorted_cc: list = list(), verbose: bool = False, plot: bool = False) -> nx.Graph:\n",
     "    \"\"\"\n",
-    "    Makes the graph bigger by adding more nodes\n",
+    "    Connect the graph by adding more edges between the nodes of connected components\n",
     "    \"\"\"\n",
     "    if sample_size <= 0: raise ValueError(f\"Invalid sample size: {sample_size}\")\n",
     "    if len(sorted_cc) <= 1: raise ValueError(f\"Invalid connected component list\")\n",
