--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -341,7 +341,7 @@
     "            if verbose: print_log(f\"Graph is connected\")\n",
     "            return graph\n",
     "        else:\n",
-    "            # make it bigger\n",
+    "            # make graph connected\n",
     "\n",
     "\n",
     "            return graph\n",
