--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -341,7 +341,9 @@
     "            if verbose: print_log(f\"Graph is connected\")\n",
     "            return graph\n",
     "        else:\n",
-    "            # make graph connected\n",
+    "            # make graph bigger by connecting the connected components\n",
+    "            if verbose: print_log(f\"Making graph connected\")\n",
+    "            return make_graph_connected(graph, sample_size, sorted_cc, verbose)\n",
     "\n",
     "\n",
     "            return graph\n",
