--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -324,7 +324,7 @@
     "        nx.draw(__graph, with_labels=True, ax=axes[1])\n",
     "    return __graph\n",
     "\n",
-    "def sample_graph(graph: nx.Graph, sample_size: int, verbose: bool) -> nx.Graph:\n",
+    "def sample_graph(graph: nx.Graph, sample_size: int, verbose: bool = False, plot: bool = False) -> nx.Graph:\n",
     "    \"\"\"\n",
     "    Returns a sample graph of the given size\n",
     "    \"\"\"\n",
