--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -324,7 +324,7 @@
     "        nx.draw(__graph, with_labels=True, ax=axes[1])\n",
     "    return __graph\n",
     "\n",
-    "def sample_graph(graph: nx.Graph, sample_size: int, verbose: bool = False, plot: bool = False) -> nx.Graph:\n",
+    "def sample_graph(graph: nx.Graph, sample_size: int = 25, verbose: bool = False, plot: bool = False) -> nx.Graph:\n",
     "    \"\"\"\n",
     "    Returns a sample graph of the given size\n",
     "    \"\"\"\n",
@@ -343,7 +343,7 @@
     "        else:\n",
     "            # make graph bigger by connecting the connected components\n",
     "            if verbose: print_log(f\"Making graph connected\")\n",
-    "            return make_graph_connected(graph, sample_size, sorted_cc, verbose)\n",
+    "            return make_graph_connected(graph, sample_size, sorted_cc, verbose=verbose, plot=plot)\n",
     "    else:\n",
     "        # make it shorter\n",
     "\n",
