--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -343,7 +343,7 @@
     "        else:\n",
     "            # make graph bigger by connecting the connected components\n",
     "            if verbose: print_log(f\"Making graph connected\")\n",
-    "            return make_graph_connected(graph, sample_size, sorted_cc, verbose=verbose, plot=plot)\n",
+    "            return make_graph_connected(graph=graph, sample_size=sample_size, sorted_cc=sorted_cc, verbose=verbose, plot=plot)\n",
     "    else:\n",
     "        # make it shorter\n",
     "\n",
