Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -328,6 +328,8 @@
     "    \"\"\"\n",
     "    Returns a sample graph of the given size\n",
     "    \"\"\"\n",
+    "    if sample_size <= 0: raise ValueError(f\"Invalid sample size: {sample_size}\")\n",
+    "\n",
     "    sorted_cc = sorted(nx.connected_components(graph), key=len, reverse=True)\n",
     "    largest_cc = sorted_cc[0]\n",
     "\n",
