--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -344,6 +344,8 @@
     "            return make_graph_connected(graph=graph, sample_size=sample_size, sorted_cc=sorted_cc, verbose=verbose, plot=plot)\n",
     "    else:\n",
     "        # make it shorter\n",
+    "        new_graph = nx.subgraph(graph, list(largest_cc)[:sample_size])\n",
+    "        return \n",
     "\n",
     "        \n",
     "        \n",
