--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -345,7 +345,7 @@
     "    else:\n",
     "        # make it shorter\n",
     "        new_graph = nx.subgraph(graph, list(largest_cc)[:sample_size])\n",
-    "        return \n",
+    "        return make_graph_connected(graph=new_graph, sample_size=sample_size, sorted_cc=sorted_cc, verbose=verbose, plot=plot)\n",
     "\n",
     "        \n",
     "        \n",
