--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 223,
    "id": "d77c25e6",
    "metadata": {},
    "outputs": [],
@@ -343,7 +343,7 @@
     "            if verbose: print_log(f\"Making graph connected\")\n",
     "            return make_graph_connected(graph=graph, sample_size=sample_size, sorted_cc=sorted_cc, verbose=verbose, plot=plot)\n",
     "    else:\n",
-    "        # make it shorter\n",
+    "        # make graph shorter by keeping 'sample_size' elements only\n",
     "        return make_graph_connected(graph=nx.subgraph(graph, list(largest_cc)[:sample_size]), sample_size=sample_size, sorted_cc=sorted_cc, verbose=verbose, plot=plot)"
    ]
   },
