Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -343,7 +343,7 @@
     "            if verbose: print_log(f\"Making graph connected\")\n",
     "            return make_graph_connected(graph=graph, sample_size=sample_size, sorted_cc=sorted_cc, verbose=verbose, plot=plot)\n",
     "    else:\n",
-    "        # make graph shorter by keeping 'sample_size' elements only\n",
+    "        # make graph shorter by keeping 'sample_size' elements only and connecting them\n",
     "        return make_graph_connected(graph=nx.subgraph(graph, list(largest_cc)[:sample_size]), sample_size=sample_size, sorted_cc=sorted_cc, verbose=verbose, plot=plot)"
    ]
   },
