--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 224,
    "id": "d77c25e6",
    "metadata": {},
    "outputs": [],
@@ -344,6 +344,7 @@
     "            return make_graph_connected(graph=graph, sample_size=sample_size, sorted_cc=sorted_cc, verbose=verbose, plot=plot)\n",
     "    else:\n",
     "        # make graph shorter by keeping 'sample_size' elements only and connecting them\n",
+    "        if verbose: print_log(f\"Downsampling a larger graph\")\n",
     "        return make_graph_connected(graph=nx.subgraph(graph, list(largest_cc)[:sample_size]), sample_size=sample_size, sorted_cc=sorted_cc, verbose=verbose, plot=plot)"
    ]
   },
