Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -236,6 +236,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "2380a9b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def downsample_connected_graph(graph: nx.Graph, largest_cc: list) -> nx.Graph:\n",
+    "    \"\"\"\n",
+    "    Down-samples the graph to only contain the largest connected component\n",
+    "    \"\"\"\n",
+    "    graph = graph.subgraph(largest_cc)\n",
+    "    return graph"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 225,
    "id": "d77c25e6",
    "metadata": {},
