--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -241,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def downsample_connected_graph(graph: nx.Graph, largest_cc: list) -> nx.Graph:\n",
+    "def downsample_connected_graph(graph: nx.Graph, largest_cc: set) -> nx.Graph:\n",
     "    \"\"\"\n",
     "    Down-samples the graph to only contain the largest connected component\n",
     "    \"\"\"\n",
