--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -241,9 +241,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def downsample_connected_graph(graph: nx.Graph, largest_cc: set) -> nx.Graph:\n",
+    "def downsample_connected_graph(graph: nx.Graph, largest_cc: set, sample_size: int = 25, verbose: bool = False, plot: bool = False) -> nx.Graph:\n",
     "    \"\"\"\n",
-    "    Down-samples the graph to only contain the largest connected component\n",
+    "    Down-samples the graph to only contain sample_size number of nodes\n",
     "    \"\"\"\n",
     "    graph = graph.subgraph(largest_cc)\n",
     "    return graph"
