--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -243,9 +243,11 @@
    "source": [
     "def downsample_connected_graph(graph: nx.Graph, largest_cc: set, sample_size: int = 25, verbose: bool = False, plot: bool = False) -> nx.Graph:\n",
     "    \"\"\"\n",
-    "    Down-samples the graph to only contain sample_size number of nodes\n",
+    "    Down-samples the graph to only contain \"sample_size\" number of nodes\n",
     "    \"\"\"\n",
-    "    graph = graph.subgraph(largest_cc)\n",
+    "    __graph = graph.subgraph(largest_cc).copy()\n",
+    "\n",
+    "\n",
     "    return graph"
    ]
   },
