--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 247,
    "id": "4a197da6",
    "metadata": {},
    "outputs": [
@@ -193,24 +193,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 248,
    "id": "d8e72801",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'4R79.2', 'F33A8.4', 'K08E4.1', 'Y37E3.9', 'Y59A8B.1'}"
+       "['H13N06.5',\n",
+       " 'W02B12.10',\n",
+       " 'F59A6.1',\n",
+       " 'Y46G5A.31',\n",
+       " 'W05G11.6',\n",
+       " 'C39F7.4',\n",
+       " 'E02C12.6',\n",
+       " 'F32D8.14',\n",
+       " 'F30H5.1',\n",
+       " 'ZC443.6']"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "largest_cc = max(nx.connected_components(graph), key=len)\n",
-    "largest_cc"
+    "list(largest_cc)[:10]"
    ]
   },
   {
