--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -224,23 +224,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 249,
    "id": "ff414d0c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['4R79.2']"
+       "['T05G5.6', 'Y47G6A.20']"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 249,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(graph.adj['Y37E3.9'])"
+    "node = list(largest_cc)[10]\n",
+    "list(graph.adj[node])"
    ]
   },
   {
