--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -246,6 +246,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 257,
+   "id": "996fbb05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 257,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nx.is_connected(nx.ego_graph(graph, node, radius=5))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "2380a9b9",
    "metadata": {},
@@ -255,7 +276,13 @@
     "    \"\"\"\n",
     "    Down-samples the graph to only contain \"sample_size\" number of nodes\n",
     "    \"\"\"\n",
+    "\n",
+    "    # pick a random node from the largest connected component\n",
+    "    __node = np.random.choice(list(largest_cc))\n",
+    "    \n",
     "    __graph = graph.subgraph(largest_cc).copy()\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
