--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -279,6 +279,8 @@
     "\n",
     "    # pick a random node from the largest connected component\n",
     "    __node = np.random.choice(list(largest_cc))\n",
+    "    __total_nodes = 0\n",
+    "\n",
     "    \n",
     "    __graph = graph.subgraph(largest_cc).copy()\n",
     "\n",
