--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -281,6 +281,8 @@
     "    __node = np.random.choice(list(largest_cc))\n",
     "    __total_nodes = 0\n",
     "\n",
+    "    for i, __node in enumerate(largest_cc):\n",
+    "\n",
     "    \n",
     "    __graph = graph.subgraph(largest_cc).copy()\n",
     "\n",
