--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -246,23 +246,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 260,
    "id": "996fbb05",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "145"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 260,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nx.is_connected(nx.ego_graph(graph, node, radius=5))"
+    "len(nx.ego_graph(graph, node, radius=5))"
    ]
   },
   {
@@ -281,8 +281,16 @@
     "    __node = np.random.choice(list(largest_cc))\n",
     "    __total_nodes = 0\n",
     "\n",
-    "    for i, _ in enumerate(largest_cc):\n",
-    "        \n",
+    "    for i, _ in enumerate(range(1, sample_size)):\n",
+    "        # get the ego graph of the node\n",
+    "        __ego_graph = nx.ego_graph(graph, __node, radius=i)\n",
+    "        __total_nodes = len(__ego_graph)\n",
+    "        if verbose:\n",
+    "            print_log(f\"Node: {__node}, Total Nodes: {__total_nodes}\")\n",
+    "\n",
+    "        # pick a random node from the ego graph\n",
+    "        __node = np.random.choice(list(__ego_graph.nodes))\n",
+    "\n",
     "    \n",
     "    __graph = graph.subgraph(largest_cc).copy()\n",
     "\n",
