--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -285,8 +285,7 @@
     "        # get the ego graph of the node\n",
     "        __ego_graph = nx.ego_graph(graph, __node, radius=i)\n",
     "        __total_nodes = len(__ego_graph)\n",
-    "        if verbose:\n",
-    "            print_log(f\"Node: {__node}, Total Nodes: {__total_nodes}\")\n",
+    "        if verbose: print_log(f\"Node: '{__node}' yields '{__total_nodes}' ego-graph nodes after radius '{i}'\")\n",
     "\n",
     "        # pick a random node from the ego graph\n",
     "        __node = np.random.choice(list(__ego_graph.nodes))\n",
