--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -280,16 +280,16 @@
     "    # pick a random node from the largest connected component\n",
     "    __node = np.random.choice(list(largest_cc))\n",
     "    __total_nodes = 0\n",
-    "\n",
+    "    __graph = nx.Graph()\n",
+    "    \n",
     "    for i, _ in enumerate(range(1, sample_size)):\n",
     "        # get the ego graph of the node\n",
     "        __ego_graph = nx.ego_graph(graph, __node, radius=i)\n",
     "        __total_nodes = len(__ego_graph)\n",
     "        if verbose: print_log(f\"Node: '{__node}' yields '{__total_nodes}' ego-graph nodes after radius '{i}'\")\n",
-    "\n",
-    "        # pick a random node from the ego graph\n",
-    "        __node = np.random.choice(list(__ego_graph.nodes))\n",
-    "\n",
+    "        if __total_nodes >= sample_size:\n",
+    "            break\n",
+    "    \n",
     "    \n",
     "    __graph = graph.subgraph(largest_cc).copy()\n",
     "\n",
