--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -284,8 +284,8 @@
     "    \n",
     "    for i, _ in enumerate(range(1, sample_size)):\n",
     "        # get the ego graph of the node\n",
-    "        __ego_graph = nx.ego_graph(graph, __node, radius=i)\n",
-    "        __total_nodes = len(__ego_graph)\n",
+    "        __graph = nx.ego_graph(graph, __node, radius=i)\n",
+    "        __total_nodes = len(__graph)\n",
     "        if verbose: print_log(f\"Node: '{__node}' yields '{__total_nodes}' ego-graph nodes after radius '{i}'\")\n",
     "        if __total_nodes >= sample_size:\n",
     "            break\n",
