--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -279,8 +279,7 @@
     "\n",
     "    # pick a random node from the largest connected component\n",
     "    __node = np.random.choice(list(largest_cc))\n",
-    "    __total_nodes = 0\n",
-    "    __graph = nx.Graph()\n",
+    "    __total_nodes, __graph = 0, nx.Graph()\n",
     "    \n",
     "    for i, _ in enumerate(range(1, sample_size)):\n",
     "        # get the ego graph of the node\n",
@@ -290,14 +289,8 @@
     "        if __total_nodes >= sample_size:\n",
     "            break\n",
     "    \n",
-    "    \n",
-    "    __graph = graph.subgraph(largest_cc).copy()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "    return graph"
+    "    if plot: nx.draw(__graph, with_labels=True)\n",
+    "    return __graph"
    ]
   },
   {
