--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -286,8 +286,9 @@
     "        __ego_graph = nx.ego_graph(graph, __node, radius=i)\n",
     "        __total_nodes = len(__ego_graph)\n",
     "        if verbose: print_log(f\"Node: '{__node}' yields '{__total_nodes}' ego-graph nodes after radius '{i}'\")\n",
-    "        if __total_nodes >= sample_size:\n",
+    "        if (__total_nodes >= sample_size) and not nx.is_empty(__graph):\n",
     "            break\n",
+    "        __graph = __ego_graph\n",
     "    \n",
     "    if plot: nx.draw(__graph, with_labels=True)\n",
     "    return __graph"
