--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -193,23 +193,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 279,
    "id": "8d5e5814",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<networkx.classes.graph.Graph at 0x15b953f10>"
+       "'Graph with 2989 nodes and 4660 edges'"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 279,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "di_graph.to_undirected()"
+    "str(di_graph.to_undirected())"
    ]
   },
   {
@@ -403,11 +403,13 @@
     "        nx.draw(__graph, with_labels=True, ax=axes[1])\n",
     "    return __graph\n",
     "\n",
-    "def sample_graph(graph: nx.Graph, sample_size: int = 25, verbose: bool = False, plot: bool = False) -> nx.Graph:\n",
+    "def sample_graph(graph: Union[nx.Graph, nx.DiGraph], sample_size: int = 25, verbose: bool = False, plot: bool = False) -> nx.Graph:\n",
     "    \"\"\"\n",
     "    Returns a sample graph of the given size\n",
     "    \"\"\"\n",
     "    if sample_size <= 0: raise ValueError(f\"Invalid sample size: {sample_size}\")\n",
+    "\n",
+    "    if isinstance(graph, nx.DiGraph): graph = graph.to_undirected()\n",
     "\n",
     "    sorted_cc = sorted(nx.connected_components(graph), key=len, reverse=True)\n",
     "    largest_cc = sorted_cc[0]\n",
