--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -370,6 +370,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from networkx import is_directed\n",
+    "\n",
+    "\n",
     "def make_graph_connected(graph: nx.Graph, sample_size: int = 25, sorted_cc: list = list(), verbose: bool = False, plot: bool = False) -> nx.Graph:\n",
     "    \"\"\"\n",
     "    Connect the graph by adding more edges between the nodes of connected components\n",
@@ -408,6 +411,8 @@
     "    Returns a sample graph of the given size\n",
     "    \"\"\"\n",
     "    if sample_size <= 0: raise ValueError(f\"Invalid sample size: {sample_size}\")\n",
+    "\n",
+    "    is_directed = nx.is_directed(graph)\n",
     "\n",
     "    if isinstance(graph, nx.DiGraph): graph = graph.to_undirected()\n",
     "\n",
