--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -412,9 +412,8 @@
     "    \"\"\"\n",
     "    if sample_size <= 0: raise ValueError(f\"Invalid sample size: {sample_size}\")\n",
     "\n",
-    "    is_directed = nx.is_directed(graph)\n",
-    "\n",
-    "    if isinstance(graph, nx.DiGraph): graph = graph.to_undirected()\n",
+    "    is_directed = nx.is_directed(graph) and isinstance(graph, nx.DiGraph)\n",
+    "    if is_directed: graph = graph.to_undirected()\n",
     "\n",
     "    sorted_cc = sorted(nx.connected_components(graph), key=len, reverse=True)\n",
     "    largest_cc = sorted_cc[0]\n",
