--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -418,7 +418,7 @@
     "    sorted_cc = sorted(nx.connected_components(graph), key=len, reverse=True)\n",
     "    largest_cc = sorted_cc[0]\n",
     "\n",
-    "    __graph = None\n",
+    "    __graph = nx.Graph()\n",
     "\n",
     "    if sample_size > len(largest_cc):\n",
     "        if verbose: print_error(f\"Sample size {sample_size} is greater than the largest connected component size {len(largest_cc)}\")\n",
