Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -424,11 +424,11 @@
     "        if verbose: print_error(f\"Sample size {sample_size} is greater than the largest connected component size {len(largest_cc)}\")\n",
     "        if nx.is_connected(graph):\n",
     "            if verbose: print_log(f\"Graph is connected\")\n",
-    "            return graph\n",
+    "            __graph = graph.copy()\n",
     "        else:\n",
     "            # make graph bigger by connecting the connected components\n",
     "            if verbose: print_log(f\"Making graph connected\")\n",
-    "            return make_graph_connected(graph=graph, sample_size=sample_size, sorted_cc=sorted_cc, verbose=verbose, plot=plot)\n",
+    "            __graph = make_graph_connected(graph=graph, sample_size=sample_size, sorted_cc=sorted_cc, verbose=verbose, plot=plot)\n",
     "    else:\n",
     "        # make graph shorter by keeping 'sample_size' elements only and connecting them\n",
     "        if verbose: print_log(f\"Downsampling a larger graph\")\n",
