Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -432,7 +432,9 @@
     "    else:\n",
     "        # make graph shorter by keeping 'sample_size' elements only and connecting them\n",
     "        if verbose: print_log(f\"Downsampling a larger graph\")\n",
-    "        return downsample_connected_graph(graph=graph, largest_cc=largest_cc, sample_size=sample_size, verbose=verbose, plot=plot)"
+    "        __graph = downsample_connected_graph(graph=graph, largest_cc=largest_cc, sample_size=sample_size, verbose=verbose, plot=plot)\n",
+    "    \n",
+    "    return undirected_to_directed(__graph) if is_directed else __graph"
    ]
   },
   {
