Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -265,7 +265,16 @@
    "outputs": [],
    "source": [
     "parent_dir = abspath(join(join(getcwd(), pardir), pardir))\n",
-    "data_dir = join(parent_dir, 'data')"
+    "data_dir = join(parent_dir, 'data')\n",
+    "data_file = join(data_dir, 'DM-HT.txt')\n",
+    "# data_file = join(data_dir, 'DM-HT_small.txt')\n",
+    "\n",
+    "sample_size = 50\n",
+    "\n",
+    "graph = nx.read_edgelist(data_file, nodetype=str, data=((\"weight\", float),))\n",
+    "di_graph = undirected_to_directed(graph)\n",
+    "\n",
+    "print(f\"{graph}\")"
    ]
   },
   {
@@ -282,12 +291,7 @@
      ]
     }
    ],
-   "source": [
-    "graph = nx.read_edgelist(join(data_dir, \"DM-HT.txt\"), nodetype=str, data=((\"weight\", float),))\n",
-    "# graph = nx.read_edgelist(join(data_dir, \"DM-HT_small.txt\"), nodetype=str, data=((\"weight\", float),))\n",
-    "di_graph = undirected_to_directed(graph)\n",
-    "print(f\"{graph}\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
